--- a/style.css
+++ b/style.css
@@ -1,8 +1,6 @@
 @import url("https://fonts.googleapis.com/css2?family=Young+Serif&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Outfit:wght@100..900&display=swap");
 
-/* Custom Props */
-
 :root {
   --primary-nutmeg: hsl(14, 45%, 36%);
   --primary-dark-raspberry: hsl(332, 51%, 32%);
@@ -14,8 +12,6 @@
   --neutral-wenge-brown: hsl(30, 10%, 34%);
   --neutral-dark-charcoal: hsl(24, 5%, 18%);
 }
-
-/* Reset */
 
 *,
 *::before,
@@ -29,22 +25,6 @@ img {
   display: block;
   max-width: 100%;
 }
-
-/* Utility */
-
-.flow-content > * + * {
-  margin-top: 1.25rem;
-}
-
-.bold-text {
-  font-weight: 600;
-}
-
-.border-top {
-  border-top: 1px solid var(--neutral-light-grey);
-}
-
-/* General */
 
 body {
   font-family: "Outfit", "Arial", sans-serif;
@@ -61,6 +41,22 @@ h2 {
 
 li::marker {
   font-weight: bold;
+}
+
+/* Composition */
+
+.flow-content > * + * {
+  margin-top: 1.25rem;
+}
+
+/* Utility */
+
+.bold-text {
+  font-weight: 600;
+}
+
+.border-top {
+  border-top: 1px solid var(--neutral-light-grey);
 }
 
 /* Recipe */
